<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="PRG_CASE_FinaliseDataManual" Id="{de1c4946-2f6a-46af-94e8-69091e414096}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_CASE_FinaliseDataManual
VAR
	fbCase_FinaliseData		: FB_CASE_FinaliseData;
	
	(* Init function/method declarations*)
	rTrigDataInit		: R_TRIG;
	bDataInit			: BOOL;
	iOuter				: INT;
	iPack				: INT;
	sPackNum			: STRING;
	sOuterNum			: STRING;
	sPackCode			: STRING;
	
	(* Inputs *)
	bExecute 				: BOOL;		(* set TRUE to move Outers *)
	bDoorReject				: BOOL;
	stRejectReasonsForCase	: ST_RejectReasonsForCase; //inicjalizacja rejectResonow
	
	(* In/Out *)
	stProductInstruction	: ST_PCM_Status;
	stCodeInfo_Outer		: ST_CodeInfo;
	stCACData 				: ST_CAC_Data;	(* Case Queue *)
	stCACDataHMI			: ST_HMI_CAC_Data;
	
	(* Outputs *)
	bDone 					: BOOL;
	bBusy					: BOOL;

	bCACValid				: BOOL;
	bCACInvalid				: BOOL;

	bCheckDuplicates		: BOOL;
	bReadyToValidate		: BOOL;
	
	sRejectCode				: T_MaxString;
	sCaseContent			: T_LongSTRING;
	
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Fbd"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeBox">
                    <o>
                      <v n="BoxType">"Init"</v>
                      <o n="Instance" t="Operand">
                        <n n="Operand" />
                        <v n="Type">""</v>
                        <v n="Comment">""</v>
                        <v n="SymbolComment">""</v>
                        <v n="Address">""</v>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <v n="LValue">false</v>
                        <v n="Boolean">false</v>
                        <v n="IsInstance">true</v>
                        <v n="Id">57L</v>
                      </o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" />
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">false</v>
                        <v n="Extensible">false</v>
                      </o>
                      <n n="InputFlags" />
                      <l2 n="InputItems" />
                      <o n="InputParam" t="ParamList">
                        <l2 n="Names" />
                        <l2 n="Types" />
                      </o>
                      <o n="OutputParam" t="ParamList">
                        <l2 n="Names" />
                        <l2 n="Types" />
                      </o>
                      <v n="CallType" t="Operator">Action</v>
                      <v n="EN">false</v>
                      <v n="ENO">false</v>
                      <n n="STSnippet" />
                      <v n="ContainsExtensibleInputs">false</v>
                      <v n="ProvidesSTSnippet">false</v>
                      <v n="Id">58L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">56L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeBox">
                    <o>
                      <v n="BoxType">"FB_CASE_FinaliseData"</v>
                      <o n="Instance" t="Operand">
                        <v n="Operand">"fbCase_FinaliseData"</v>
                        <v n="Type">"FB_CASE_FinaliseData"</v>
                        <v n="Comment">""</v>
                        <v n="SymbolComment">""</v>
                        <v n="Address">""</v>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <v n="LValue">false</v>
                        <v n="Boolean">false</v>
                        <v n="IsInstance">true</v>
                        <v n="Id">37L</v>
                      </o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <n />
                          <o>
                            <v n="Operand">"bBusy"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">39L</v>
                          </o>
                          <o>
                            <v n="Operand">"bCACValid"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">40L</v>
                          </o>
                          <o>
                            <v n="Operand">"bCACInvalid"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">41L</v>
                          </o>
                          <o>
                            <v n="Operand">"bCheckDuplicates"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">42L</v>
                          </o>
                          <o>
                            <v n="Operand">"bReadyToValidate"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">43L</v>
                          </o>
                          <o>
                            <v n="Operand">"sRejectCode"</v>
                            <v n="Type">"T_MaxString"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">44L</v>
                          </o>
                          <o>
                            <v n="Operand">"sCaseContent"</v>
                            <v n="Type">"T_LongSTRING"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">45L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">true</v>
                        <v n="Extensible">false</v>
                      </o>
                      <n n="InputFlags" />
                      <l2 n="InputItems" cet="BoxTreeOperand">
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"bExecute"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">34L</v>
                          </o>
                          <v n="Id">33L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"bDoorReject"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">36L</v>
                          </o>
                          <v n="Id">35L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stRejectReasonsForCase.stDoorGuardReject"</v>
                            <v n="Type">"ST_RejectItems"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">47L</v>
                          </o>
                          <v n="Id">46L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stProductInstruction"</v>
                            <v n="Type">"ST_PCM_Status"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">49L</v>
                          </o>
                          <v n="Id">48L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stCodeInfo_Outer"</v>
                            <v n="Type">"ST_CodeInfo"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">51L</v>
                          </o>
                          <v n="Id">50L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stCACData"</v>
                            <v n="Type">"ST_CAC_Data"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">53L</v>
                          </o>
                          <v n="Id">52L</v>
                        </o>
                        <o>
                          <o n="Operand" t="Operand">
                            <v n="Operand">"stCACDataHMI"</v>
                            <v n="Type">"ST_HMI_CAC_Data"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">55L</v>
                          </o>
                          <v n="Id">54L</v>
                        </o>
                      </l2>
                      <o n="InputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>bExecute</v>
                          <v>bDoorReject</v>
                          <v>stDoorGuardReject</v>
                          <v>stProductInstruction</v>
                          <v>stCodeInfo_Outer</v>
                          <v>stCACData</v>
                          <v>stCACDataHMI</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>ST_RejectItems</v>
                          <v>ST_PCM_Status[REF]</v>
                          <v>ST_CodeInfo[REF]</v>
                          <v>ST_CAC_Data[REF]</v>
                          <v>ST_HMI_CAC_Data[REF]</v>
                        </l2>
                      </o>
                      <o n="OutputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>bDone</v>
                          <v>bBusy</v>
                          <v>bCACValid</v>
                          <v>bCACInvalid</v>
                          <v>bCheckDuplicates</v>
                          <v>bReadyToValidate</v>
                          <v>sRejectCode</v>
                          <v>sCaseContent</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>T_MaxString</v>
                          <v>T_LongSTRING</v>
                        </l2>
                      </o>
                      <v n="CallType" t="Operator">FunctionBlock</v>
                      <v n="EN">false</v>
                      <v n="ENO">false</v>
                      <n n="STSnippet" />
                      <v n="ContainsExtensibleInputs">false</v>
                      <v n="ProvidesSTSnippet">false</v>
                      <v n="Id">38L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">5L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
    <Action Name="Init" Id="{08194a4d-05fa-4272-8ec8-ee3a74e4e1b9}">
      <Implementation>
        <ST><![CDATA[
rTrigDataInit(CLK := bDataInit);

IF rTrigDataInit.Q THEN
	
stProductInstruction.nOutersPerCase		:= 50;
stProductInstruction.nPacksPerOuter 	:= 10;

	FOR iOuter := 1 TO stProductInstruction.nOutersPerCase DO
		(* Outer number z zerami *)
		sOuterNum := F_StringAddPrefix(INT_TO_STRING(iOuter),2,'0');
		
		(* Write Outers barcodes *)
		stCACData.Outer[iOuter].Barcode    := CONCAT('OUTER', sOuterNum);
		stCACData.Outer[iOuter].OuterCodeStatus := 5;
		stCACData.Outer[iOuter].OuterRejectCode := 'OK';
		
		FOR iPack := 1 TO stProductInstruction.nPacksPerOuter DO
			(* Pack number dwucyfrowy z zerami *)
			sPackNum := F_StringAddPrefix(INT_TO_STRING(iPack),2,'0');			
			(* Sklej pack code *)
			sPackCode := CONCAT(CONCAT('PACK', sPackNum), CONCAT('OUTER', sOuterNum));
			
			(* Write Pack Barcodes / Data*)
			stCACData.Outer[iOuter].PackCode[iPack]			:= sPackCode;
			stCACData.Outer[iOuter].PackCodeStatus[iPack]	:= 5;
			stCACData.Outer[iOuter].PackRejectID[iPack]		:= 0;			
			stCACData.Outer[iOuter].PackRejectCode[iPack]	:= 'OK';
			
						
			stCACData.Outer[iOuter].NumberOfPacks := stProductInstruction.nPacksPerOuter;
			
		END_FOR;
	END_FOR;	

//initialize needed data structures
stCACData.NumberOfOuters						:= stProductInstruction.nOutersPerCase;
stCACData.CaseRejectCode						:= 'OK';
stCodeInfo_Outer.nEntireLength					:= 7;
stCodeInfo_Outer.stSerialCode.nCodeStartPos 	:= 1;
stCodeInfo_Outer.stSerialCode.nCodeLength 		:= 7;

(* opcje do testowania *)
//stCACData.Barcode					:= 'Barcode';
//bDoorReject						:= true/false;	
//stCACData.CaseRejectCode			:= 'OK' or '';
//stCACDataHMI.nNumberOfPacks ma byc rowny stProductInstruction.nPacksPerOuter;
// sprawdzac wartosc stCACDataHMI.aOuter[nOuterIndex].sBarcode = concat z numerami na koncu
// w zaleznoci jaka wartosc OuterRejectCode / linia 47 bloku
// sprawdzic warunek ze jak ma byc bCACValid albo bCACInvalid
	
END_IF




]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>